bug fix: isolate hyperlink to button

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -8,7 +8,7 @@
     <p>Quantifying the game of Baseball through Data Science & Analytics</p>
         <button style="font-size: 18px; height: 40px; width: 115px; background-color: white;">
         <a href="https://www.linkedin.com/in/jonathan-kutsch-789131190/" target="_blank">
-            LinkedIn</button>
+            LinkedIn</a></button>
     </div>
     </div>
 
