adjusted homepage format

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 
+<!-- title of webpage -->
 <title>My First Website</title>
 
-<div class="banner" style="padding:15px; text-align:center;">
+<!-- name banner at top -->
+<div class="topbanner" style="padding:2px; text-align:center;">
     <div class="banner-content">
-        <h1>BEYOND THE GAME</h1>
-    <p>Quantifying the game of Baseball through Data Science & Analytics</p>
-        <button style="font-size: 18px; height: 40px; width: 115px; background-color: white;">
-        <a href="https://www.linkedin.com/in/jonathan-kutsch-789131190/" target="_blank">
-            LinkedIn</a></button>
+        <p>Jonathan Kutsch</p>
     </div>
     </div>
 
 <style>
-    .banner {
-        padding: 60px;
+    .topbanner {
+        padding: 15px;
         text-align:center;
         background:navy;
         color: white;
@@ -22,6 +20,28 @@
     }
 </style>
 
+<!-- homepage title -->
+<div class="banner" style="padding:auto; text-align:center;">
+    <div class="banner-content">
+        <h1>BEYOND THE GAME</h1>
+    <p style="color: black;">Quantifying the game of Baseball through Data Science & Analytics to advance Player Development</p>
+    <link href="https://fonts.google.com/specimen/Oswald">
+        <button style="font-size: 18px; height: 40px; width: 115px; background-color: lightgray;">
+        <a href="https://www.linkedin.com/in/jonathan-kutsch-789131190/" target="_blank">
+            LinkedIn</a></button>
+    </div>
+    </div>
+
+<style>
+    .banner {
+        text-align:center;
+        background:white;
+        color: navy;
+        font-size: 30px;
+    }
+</style>
+
+<!-- homepage picture -->
 <img src="https://rb.gy/noe2ai"
 alt="Nolan Arenado Data Homepage Pic"
 style="height: 100%; width: 40%;"
