add first project

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -42,10 +42,11 @@
 </style>
 
 <!-- homepage picture -->
+<div>
 <img src="https://rb.gy/noe2ai"
 alt="Nolan Arenado Data Homepage Pic"
 style="height: 100%; width: 40%;"
-class="center">
+     class="center"></div>
 
 <style>
     .center {
@@ -55,3 +56,11 @@ class="center">
         padding: 50px;
     }
 </style>
+
+<!-- start of projects -->
+<div class="project1">
+    <h2>March 3, 2020</h2>
+    <img src="IMG_0118.jpg"
+    alt="RHP Curveball Sping Rate and Movement"
+    style="height: 75%; width: 75%;">
+    <p>Some text..</p>
