update project 1 description

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -63,4 +63,7 @@ style="height: 100%; width: 40%;"
     <img src="IMG_0118.jpg"
     alt="RHP Curveball Sping Rate and Movement"
     style="height: 75%; width: 75%;">
-    <p>Some text..</p>
+    <p style="font-size: 24px">This is my very first analytical project focusing on the correlation between curveball spin rate and movement for right-handed pitchers.
+    Spin rate is not the only factor that impacts movement, but it is a strong contributor to the forces acting on a baseball as it reaches the strikezone.
+    One of the main goals as a pitcher is to not let your opponent hit the baseball so it is crucial to optimize vertical and horizontal movement to consistently produce on the mound.
+    </p>
