add project two and lots of formatting

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -58,12 +58,33 @@ style="height: 100%; width: 40%;"
 </style>
 
 <!-- start of projects -->
+
+<div class="project2">
+    <h4 style="font-size: 24px; font-weight:bolder; color: navy; text-align:center">Texas A&M Pitching 2019 compared to SEC</h4>
+    <h5 style="text-align:center; font-size: 18px; margin-bottom: 0;">March 8, 2020</h5>
+    <img src="IMG_0129.jpg"
+    alt="Strikeout/inning vs WHIP"
+    style="height: 75%; width: 75%; margin-top: 0;"
+    class="center">
+    <p style="font-size: 24px; text-align:justify">This project is focused on my college's baseball team, Texas A&M University, in comparison to the rest of the Southeastern Conference.
+        In order to be the best, you must compare yourself to the rest and find where you stand in order to improve. I compiled the data of five of the best pitchers at Texas A&M 
+        and I lined them up against the best pitcher of each team in their conference in terms of Strikeouts per Inning. The graphic shows that those that have the highest K/inning 
+        and lowest WHIP (walks and hits per inning) are the most successful. Take for example, Asa Lacy (far left), who is one of the most dominating pitchers in baseball is a First-Team 
+        All American and was drafted fourth overall for nearly seven million dollars. 
+    </p>
+    <hr
+    style="border: 3px solid navy;
+    border-radius: 2px;
+    margin-top: 5%">
+    
 <div class="project1">
-    <h2>March 3, 2020</h2>
+    <h2 style="font-size: 24px; color: navy; font-weight: bolder; text-align:center; margin-top:7%;">Correlation between Spin Rate and Movement</h2>
+    <h3 style="text-align:center; font-size:18px;">March 3, 2020</h3>
     <img src="IMG_0118.jpg"
     alt="RHP Curveball Sping Rate and Movement"
-    style="height: 75%; width: 75%;">
-    <p style="font-size: 24px">This is my very first analytical project focusing on the correlation between curveball spin rate and movement for right-handed pitchers.
+    style="height: 75%; width: 75%;"
+    class="center">
+    <p style="font-size: 24px, text-align:justify">This is my very first analytical project focusing on the correlation between curveball spin rate and movement for right-handed pitchers.
     Spin rate is not the only factor that impacts movement, but it is a strong contributor to the forces acting on a baseball as it reaches the strikezone.
     One of the main goals as a pitcher is to not let your opponent hit the baseball so it is crucial to optimize vertical and horizontal movement to consistently produce on the mound.
     </p>
