add project 3 and format

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -59,6 +59,46 @@ style="height: 100%; width: 40%;"
 
 <!-- start of projects -->
 
+<div class="project3">
+    <h4 style="font-size: 24px; font-weight:bolder; color: navy; text-align:center">Fernando Tatis Jr. Fielding OAA vs League Best 2019</h4>
+    <h5 style="text-align:center; font-size: 18px; margin-bottom: 3%;">April 3, 2020</h5>
+    <div class="row">
+        <div class="column">
+            <img src="IMG_0177.jpg"
+            alt="Tatis Jr. Fielding Pyramid"
+            style="width: 100%; margin-top: 0;">
+        </div>
+        <div class="column">
+            <img src="IMG_0180.jpg"
+            alt="Tatis Jr. Fielding Chart"
+            style="width: 100%; margin-top: 8%">
+        </div>
+    </div>
+    <p style="font-size: 32px; text-align:justify; margin-left: 50px; margin-right: 50px">
+        Fernando Tatis Jr. has one of the smoothest backhands and strongest arms in the infield. However, in 2019, his biggest weakness was his throwing errors.
+        14/18 errors are due to poor throws. With half as much field time, he has more throwing errors than any other SS. Why? It can vary from poor footwork leading to a rushed
+        throw to simply trying to make the throw on a play that the average SS can't even field. He can eliminate these errors by counting the hops to prepare your feet to be in
+        optimal position to make a strong and accurate throw. Shortening the duration between funneling the baseball and release will also drastically decrease throwing errors.
+        He's become a phenom before even playing 100 games, but in addition to his offensive capabilities, developing his defensive skills will make him an All-Star. 
+    </p>
+    <hr
+    style="border: 4px solid navy;
+    border-radius: 2px;
+    margin-top: 5%;
+    margin-bottom: 5%;">
+</div>
+
+<style>
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: auto;
+        padding: 5px;
+    }
+</style>
+
 <div class="project2">
     <h4 style="font-size: 24px; font-weight:bolder; color: navy; text-align:center">Texas A&M Pitching 2019 compared to SEC</h4>
     <h5 style="text-align:center; font-size: 18px; margin-bottom: 0;">March 8, 2020</h5>
@@ -66,14 +106,15 @@ style="height: 100%; width: 40%;"
     alt="Strikeout/inning vs WHIP"
     style="height: 75%; width: 75%; margin-top: 0;"
     class="center">
-    <p style="font-size: 24px; text-align:justify">This project is focused on my college's baseball team, Texas A&M University, in comparison to the rest of the Southeastern Conference.
+    <p style="font-size: 32px; text-align:justify; margin-left: 50px; margin-right: 50px">
+        This project is focused on my college's baseball team, Texas A&M University, in comparison to the rest of the Southeastern Conference.
         In order to be the best, you must compare yourself to the rest and find where you stand in order to improve. I compiled the data of five of the best pitchers at Texas A&M 
         and I lined them up against the best pitcher of each team in their conference in terms of Strikeouts per Inning. The graphic shows that those that have the highest K/inning 
         and lowest WHIP (walks and hits per inning) are the most successful. Take for example, Asa Lacy (far left), who is one of the most dominating pitchers in baseball is a First-Team 
         All American and was drafted fourth overall for nearly seven million dollars. 
     </p>
     <hr
-    style="border: 3px solid navy;
+    style="border: 4px solid navy;
     border-radius: 2px;
     margin-top: 5%">
     
@@ -84,7 +125,8 @@ style="height: 100%; width: 40%;"
     alt="RHP Curveball Sping Rate and Movement"
     style="height: 75%; width: 75%;"
     class="center">
-    <p style="font-size: 24px, text-align:justify">This is my very first analytical project focusing on the correlation between curveball spin rate and movement for right-handed pitchers.
+    <p style="font-size: 32px, text-align:justify; margin-left: 50px; margin-right: 50px">
+    This is my very first analytical project focusing on the correlation between curveball spin rate and movement for right-handed pitchers.
     Spin rate is not the only factor that impacts movement, but it is a strong contributor to the forces acting on a baseball as it reaches the strikezone.
     One of the main goals as a pitcher is to not let your opponent hit the baseball so it is crucial to optimize vertical and horizontal movement to consistently produce on the mound.
     </p>
