add contact form

--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -130,3 +130,78 @@ style="height: 100%; width: 40%;"
     Spin rate is not the only factor that impacts movement, but it is a strong contributor to the forces acting on a baseball as it reaches the strikezone.
     One of the main goals as a pitcher is to not let your opponent hit the baseball so it is crucial to optimize vertical and horizontal movement to consistently produce on the mound.
     </p>
+
+<!-- contact -->
+<div class="container">
+    <div style="text-align:center">
+        <h2 style="color:white; margin-bottom: 2%; margin-top: 2%; font-size: 32px;">Leave a Message!</h2>
+    </div>
+    <div class="row">
+        <div class="column">
+            <img src="IMG_01771.jpg"
+            style="width: 100%">
+        </div>
+        <form action="mailto:jonkutschedu@gmail.com" style="color: white; font-size: 20px;">
+            <p style="margin-bottom: 2%"></p>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name...">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name...">
+            <label for="subject">Subject</label>
+            <textarea id="subject" name="subject" placeholder="Write something..." style="height:180px"></textarea>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+</div>
+
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    input[type=text], textarea {
+        width: 100%;
+        padding: 12px;
+        border: 1px solid white;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        resize: vertical;
+    }
+
+    input[type=submit] {
+        background-color: navy;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        cursor: pointer;
+    }
+    input[type=submit] :hover {
+        background-color: white;
+    }
+
+    .container {
+        border-radius: 5px;
+        background-color: black;
+        padding:10px;
+    }
+
+    .column {
+        float: left;
+        width: 50%;
+        margin-top: 6px;
+        padding: 20px;
+    }
+
+    .row::after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    @media screen and (max-width: 600px) {
+        .column, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+        }
+    }
+</style>
