--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -59,6 +59,46 @@ style="height: 100%; width: 40%;"
 
 <!-- start of projects -->
 
+<div class="project4">
+    <h6 style="font-size: 24px; font-weight:bolder; color: navy; text-align:center">Gerrit Cole Fastball Development</h6>
+    <h7 style="text-align:center; font-size: 18px; margin-bottom: 3%;">May 25, 2020</h7>
+    <div class="row">
+        <div class="column">
+            <img src="spinrate_vs_vertmove.JPG"
+            alt="Gerrit Cole Spin Rate vs Vertical Movement"
+            style="width: 1600px; margin-top: 0;">
+        </div>
+        <div class="column">
+            <img src="spinrate_vs_whiff.JPG"
+            alt="Gerrit Cole Spin Rate vs Whiff %"
+            style="width: 1600px; margin-top: 2%">
+        </div>
+    </div>
+    <p style="font-size: 32px; text-align:justify; margin-left: 50px; margin-right: 50px">
+        The million dollar arm of the decade belongs to Gerrit Cole, who has the highest contract of any pitcher with $324 Million over 8 years.
+        Cole was drafted #1 overall in 2011 by the Pirates where he produced average metrics before being traded to the Astros. He was traded to the Astros after the 2017 season
+        and you can tell from the visuals above that this was the moment where he began to suceed. Velocity was not his issue, it was the spin rate that led to his sucess on the mound.
+        While on the Astros, Justin Verlander adjusted his vertical release point as well as the spin axis of his fastball. These minor adjustments helped Cole drastically increase his spin
+        rate leading to more vertical movement and a higher whiff percentage. 
+    </p>
+    <hr
+    style="border: 4px solid navy;
+    border-radius: 2px;
+    margin-top: 5%;
+    margin-bottom: 5%;">
+</div>
+
+<style>
+    .row {
+        display: flex;
+    }
+
+    .column {
+        flex: auto;
+        padding: 5px;
+    }
+</style>
+
 <div class="project3">
     <h4 style="font-size: 24px; font-weight:bolder; color: navy; text-align:center">Fernando Tatis Jr. Fielding OAA vs League Best 2019</h4>
     <h5 style="text-align:center; font-size: 18px; margin-bottom: 3%;">April 3, 2020</h5>
