--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -59,6 +59,24 @@ style="height: 100%; width: 40%;"
 
 <!-- start of projects -->
 
+<div class="project5">
+    <h3 style="font-size: 48px; font-weight:bolder; color: navy; text-align:center">The Impact Shift Has on Runs Saved</h3>
+    <h3 style="text-align:center; font-size: 28px; margin-bottom: 0;">May 25, 2020</h3>
+    <img src="IMG_0460.jpg"
+    alt="DRS vs Shift %"
+    style="height: 75%; width: 75%; margin-top: 0;"
+    class="center">
+    <p style="font-size: 32px; text-align:justify; margin-left: 50px; margin-right: 50px">
+        In this project, I am comparing each team's shift percentage to their defensived runs saved (DRS). As we can see in 2019, nearly half of the league shifted less than 20%
+        of the time. The goal is to shift at the most optimal rate and save the most amound of runs. Baltimore needs to make adjustments defensively because they
+        have the third highest shift percentage at 42.8% and the lowest runs saved at -95. The team that saves the most runs is often the team that makes it the farthest in the 
+        postseason. Now this isn't always the case, but it is critical to play with a strategy to give your team the advtange over the opponent.
+    </p>
+    <hr
+    style="border: 4px solid navy;
+    border-radius: 2px;
+    margin-top: 5%">
+
 <div class="project4">
     <h3 style="font-size: 48px; font-weight:bolder; color: navy; text-align:center">Gerrit Cole Fastball Development</h3>
     <h3 style="text-align:center; font-size: 28px; margin-bottom: 3%;">May 25, 2020</h3>
