--- a/Beyond The Game/main.html
+++ b/Beyond The Game/main.html
@@ -59,6 +59,26 @@ style="height: 100%; width: 40%;"
 
 <!-- start of projects -->
 
+<div class="project6">
+    <h3 style="font-size: 48px; font-weight:bolder; color: navy; text-align:center">Dansby Swanson Hitting Development</h3>
+    <h3 style="text-align:center; font-size: 28px; margin-bottom: 0;">August 4, 2020</h3>
+    <img src="IMG_0461.jpg"
+    alt="Dansby Swanson Hitting Development"
+    style="height: 75%; width: 75%; margin-top: 0;"
+    class="center">
+    <p style="font-size: 32px; text-align:justify; margin-left: 50px; margin-right: 50px">
+        Dansby Swanson is one of my favorite shortstops that I've been watching since his early college days at Vanderbilt. This project dives into his hitting development over the last
+        few seasons in terms of Batted Ball Profile and xwOBAcon. First, xwOBAcon is a metric that calculates the Expected Weighted On-Base Average on Contact. This is based on
+        three variables: exit velocity, launch angle, and sprint speed. The more barrels a player catches means the better launch angle and higher exit velocity produced. A coach can
+        tell their player to focus on the quality of the at-bat, but now we can narrow into the quality of the hit. I implement this metric in correlation to Dansby's batted ball profile. 
+        Going into the 2020 season I noticed he changed his approach at the plate. He began taking the ball to the opposite field more consistently. In the graphic above, it is clear
+        that he made an adjustment after the 2019 season to reduce pulling, which directly increased straight/opposite field percentage as well as a dramatically increased xwOBACon.  
+    </p>
+    <hr
+    style="border: 4px solid navy;
+    border-radius: 2px;
+    margin-top: 5%">
+
 <div class="project5">
     <h3 style="font-size: 48px; font-weight:bolder; color: navy; text-align:center">The Impact Shift Has on Runs Saved</h3>
     <h3 style="text-align:center; font-size: 28px; margin-bottom: 0;">May 25, 2020</h3>
